# gradools

./: .coveragerc  .gitignore  .travis.yml  Changelog  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
doc/: release.md
gradools/: __init__.py  canvastools.py  check.py  mconfig.py  mkfb.py  mkstable.py  report.py  stinit.py
gradools/tests/: test_canvastools.py  test_check.py  test_mconfig.py  test_mkstable.py  test_report.py  test_stinit.py
gradools/tests/data/: full_gb_example.csv  marks_2017.txt
